Critical path enumeration
