# packages/contracts/openapi/cirda-v1.yaml
@@ -844,6 +844,24 @@ paths:
           - type: string
           - type: 'null'
           title: Target Id
+      - name: max_depth
+        in: query
+        required: false
+        schema:
+          type: integer
+          maximum: 32
+          minimum: 1
+          default: 8
+          title: Max Depth
+      - name: max_paths
+        in: query
+        required: false
+        schema:
+          type: integer
+          maximum: 100
+          minimum: 1
+          default: 32
+          title: Max Paths
       - name: authorization
         in: header
         required: false
